# ZBoss

./: .gitignore  CMakeLists.txt  README.md  binconfig.hpp  main.cpp
assets/maps/: spawn.json  spawn.tmx
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/zboss/: app.hpp  callback.hpp  config.hpp  definitions.hpp  ecs.hpp  engine.hpp  exceptions.hpp  renderer.hpp  scene.hpp  zbapp.hpp  zbengine.hpp  zboss.hpp  zbscene.hpp
include/zboss/assets/: asset.hpp  cache.hpp  loader.hpp  locator.hpp  manager.hpp
include/zboss/assets/loaders/: audio.hpp  font.hpp  image.hpp  texture.hpp  tilemap.hpp
include/zboss/assets/locators/: file.hpp
include/zboss/audio/: manager.hpp  sfx.hpp  track.hpp
include/zboss/components/: animatedsprite.hpp  camerafollow.hpp  click.hpp  container.hpp  life.hpp  movement.hpp  sprite.hpp  tilemap.hpp  transform.hpp
include/zboss/components/ui/: label.hpp  textfield.hpp
include/zboss/entity/: component.hpp  constants.hpp  entity.hpp  manager.hpp
include/zboss/math/: collision.hpp  matrix.hpp  shape.hpp  vector.hpp
include/zboss/nodes/: container.hpp  node.hpp
include/zboss/tilemap/: tilemap.hpp  tileset.hpp
include/zboss/tilemap/layers/: layer.hpp  tilelayer.hpp
ri/: game.cpp  game.hpp  gameresult.hpp  main.cpp
ri/components/: bossai.cpp  bossai.hpp  entitycollider.cpp  entitycollider.hpp  hpbar.cpp  hpbar.hpp  mapcamerafollow.cpp  mapcamerafollow.hpp  movementcontroller.cpp  movementcontroller.hpp  mytilemap.cpp  mytilemap.hpp  simplemapcollider.cpp  simplemapcollider.hpp
ri/components/ui/: entry.cpp  entry.hpp
ri/scenes/: changeplayer.cpp  changeplayer.hpp  gamerules.cpp  gamerules.hpp  mainscene.cpp  mainscene.hpp  menuscene.cpp  menuscene.hpp  scoresscene.cpp  scoresscene.hpp  splashscene.cpp  splashscene.hpp
src/: ecs.cpp  engine.cpp  renderer.cpp  scene.cpp  zbengine.cpp
src/assets/: asset.cpp  manager.cpp
src/assets/loaders/: audio.cpp  font.cpp  image.cpp  texture.cpp  tilemap.cpp
src/assets/locators/: file.cpp
src/audio/: sfx.cpp  track.cpp
src/components/: animatedsprite.cpp  camerafollow.cpp  click.cpp  container.cpp  life.cpp  movement.cpp  sprite.cpp  tilemap.cpp  transform.cpp
src/components/ui/: label.cpp  textfield.cpp
src/entity/: component.cpp  constants.cpp  entity.cpp  manager.cpp
src/math/: collision.cpp  matrix.cpp  shape.cpp  vector.cpp
src/nodes/: container.cpp  node.cpp
src/tilemap/: tilemap.cpp  tileset.cpp
src/tilemap/layers/: layer.cpp  tilelayer.cpp
